# kv-store

./: .gitignore  CMakeLists.txt  Makefile  client  client.c  fnv.h  hash.c  hash.h  hash_test.c  hello.c  helpers.h  server  server.c  weather-client.c  weather-server.c  z_helpers.h
inputs/: input2  input3  words  words2  words3  words4
